k8s/devbox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devbox
  labels:
    app: devbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devbox
  template:
    metadata:
      labels:
        app: devbox
    spec:
      containers:
      - image: rparundekar/devex-pytorch2:latest
        imagePullPolicy: Always
        name: devbox
        resources:
          limits:
            nvidia.com/gpu: 1
        ports:
        - containerPort: 22
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devbox
  name: devbox
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 22
    protocol: TCP
    targetPort: 22
  selector:
    app: devbox
  sessionAffinity: None
  type: ClusterIP
