k8s/ssh-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssh-server
  labels:
    app: ssh-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssh-server
  template:
    metadata:
      labels:
        app: ssh-server
    spec:
      containers:
      - image: rparundekar/devex-pytorch2:latest
        imagePullPolicy: Always
        name: ssh-server
        resources:
          limits:
            nvidia.com/gpu: 1
        ports:
        - containerPort: 22
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: model
  name: ssh-server
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 22
    protocol: TCP
    targetPort: 22
  selector:
    app: ssh-server
  sessionAffinity: None
  type: ClusterIP
