k8s/text-generation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-generation
  labels:
    app: text-generation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: text-generation
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: text-generation
    spec:
      containers:
        - name: text-generation
          image: rparundekar/text-generation:latest
          imagePullPolicy: Always
          command:
          - "serve"
          ports:
            - containerPort: 8080
          resources:
            limits:
              nvidia.com/gpu: 1
          readinessProbe:
            httpGet:
              path: /health_check
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: text-generation
spec:
  selector:
    app: text-generation
  ports:
    - protocol: TCP
      port: 8080
