k8s/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # cert-manager.io/cluster-issuer: letsencrypt-cert
spec:
  ingressClassName: nginx
  rules:
  - http:      
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 3000
  # tls:
  #   - hosts:
  #     - sandbox.aihero.studio
  #     secretName: sandbox-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # cert-manager.io/cluster-issuer: letsencrypt-cert
spec:
  ingressClassName: nginx
  rules:
  - http:      
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 8080
  # tls:
  #   - hosts:
  #     - sandbox.aihero.studio
  #     secretName: sandbox-tls
